byte-code-compiler/test_files/typing/bad/testfile-undef_var-2.psc
i32 n() { x; }
i32 main() { i32 x; }
